--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
@@ -25,6 +27,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.7"
+    "vite": "^5.2.8"
   }
 }
