--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,7 +1,16 @@
-asgiref==3.8.1
+asgiref==3.7.2
+build==1.2.1
+click==8.1.7
 dj-rest-auth==5.1.0
-Django==4.2.11
+Django==4.2.7
 django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.15.1
-pillow==10.3.0
+packaging==24.0
+pillow==10.2.0
+pip-tools==7.4.1
+pyproject_hooks==1.0.0
+python-decouple==3.8
 sqlparse==0.4.4
+mysqlclient==2.2.4
+tomli==2.0.1
