--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_HOST: db
       MYSQL_PORT: 3306
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     depends_on:
       db:
         condition: service_healthy  
@@ -16,7 +17,7 @@ services:
     ports: 
       - 80:8000
     networks:
-      - network
+      - proyecto
 
   frontend:
     build: ./reactapp 
@@ -26,7 +27,7 @@ services:
     depends_on:
       - backend
     networks:
-      - network
+      - proyecto
     
     
   db:
@@ -39,7 +40,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       #- ./database:/var/lib/mysql
-      - bbdd:/var/lib/mysql
+      - db_data:/var/lib/mysql
     ports: 
       - 3306:3306
     restart: always
@@ -48,13 +49,26 @@ services:
       timeout: 20s
       retries: 5
     networks:
-      - network
+      - proyecto
+
+  php:
+    depends_on:
+      - db
+    container_name: app_php
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8081:80
+    environment:
+      PMA_HOST: db
+    networks:
+      - proyecto
        
 networks:
-  network:
+  proyecto:
     name: app_network
     
     
 volumes:
-  bbdd:
+  db_data:
     name: volumen1
