--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -29,7 +29,8 @@
     "react-hot-toast": "^2.4.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.3",
-    "react-time-picker": "^7.0.0"
+    "react-time-picker": "^7.0.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
