--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.16",
     "@mui/x-date-pickers": "^7.3.2",
     "@react-google-maps/api": "^2.19.3",
