--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -6,11 +6,14 @@ Django==4.2.7
 django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.15.1
+mysqlclient==2.2.4
 packaging==24.0
 pillow==10.2.0
 pip-tools==7.4.1
+psycopg==3.1.19
+psycopg2-binary==2.9.9
 pyproject_hooks==1.0.0
 python-decouple==3.8
 sqlparse==0.4.4
-mysqlclient==2.2.4
 tomli==2.0.1
+typing_extensions==4.12.0
