--- a/reactapp/.env
+++ b/reactapp/.env
@@ -1,1 +1,2 @@
-VITE_GOOGLE_MAPS_API_KEY = AIzaSyC_G0xCXyALB3IgkE5D4RpWWAxRIg9xCuQ
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyC_G0xCXyALB3IgkE5D4RpWWAxRIg9xCuQ
+VITE_API_URL=http://127.0.0.1:8000
