--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,13 +1,22 @@
 asgiref==3.8.1
+build==1.2.1
+click==8.1.7
 dj-rest-auth==5.1.0
 Django==4.2.11
 django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.15.1
+mysqlclient==2.2.4
+packaging==24.0
 pillow==10.3.0
+pip-tools==7.4.1
 psutil==5.9.8
+psycopg==3.1.19
+psycopg2-binary==2.9.9
+pyproject_hooks==1.0.0
 python-decouple==3.8
 python-dotenv==1.0.1
-psycopg2-binary
 sqlparse==0.4.4
-
+tomli==2.0.1
+typing_extensions==4.12.0
+whitenoise==6.6.0
