--- a/mysite/.gitignore
+++ b/mysite/.gitignore
@@ -1,2 +1,38 @@
 .env
-db.sqlite3
+
+# Python compiled files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django migrations
+*.log
+*.pot
+*.pyc
+*.pyo
+*.out
+*.pid
+*.swp
+*.swo
+*.log
+*.coverage
+*.cover
+*.py,cover
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.tox/
+
+# Django stuff:
+*.log
+*.pot
+*.pyc
+*.pyo
+*.out
+*.pid
+*.swp
+*.swo
+*.log
