--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -19,6 +19,8 @@
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.11",
     "moment": "^2.30.1",
     "react": "^18.2.0",
