--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.22.3",
     "react-time-picker": "^7.0.0",
